Fix profile photo cropping position

--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ section {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center top;
     position: relative;
     z-index: 1;
 }
